project('ChessLogic', 'cpp', version : '1.0.0')

# Add sources here, listing each `.cpp` file that should be included in the DLL
sources = ['main.cpp']  # Replace with actual source file names

# Create a shared library (DLL on Windows) using the source files
shared_library(
  'ChessLogic',  # Name of the library
  sources,
  install : true
)
